@@ -1,3 +1,6 @@
+Tue 11 Dec 2012 22:04:00 GMT - Release 1.06
+ Sort list of allowed methods. RT#81825
+
 Mon  2 Jul 2012 20:13:00 BST - Release 1.05
  Bugfix get_allowed_methods list:
   * include HEAD
